--- a/app/src/main/res/layout/item_place_content.xml
+++ b/app/src/main/res/layout/item_place_content.xml
@@ -9,12 +9,14 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:cardUseCompatPadding="true"
-        app:contentPadding="16dp"
-        android:background="@drawable/cardbackground"
+        app:cardCornerRadius="10dp"
+
         >
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@drawable/cardbackground"
+            android:padding="16dp"
 
             >
             <TextView
@@ -47,16 +49,17 @@
                 app:layout_constraintStart_toEndOf="@+id/control"
                 app:layout_constraintBottom_toBottomOf="@id/control"
                 android:layout_marginTop="16dp"
+
                 />
+
             <TextView
                 android:id="@+id/audioDuration"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="10dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginLeft="10dp"
-                app:layout_constraintTop_toBottomOf="@+id/audiofile"
                 app:layout_constraintStart_toStartOf="@+id/audiofile"
-                />
+                app:layout_constraintTop_toBottomOf="@+id/audiofile" />
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/control"
                 android:layout_width="wrap_content"
