--- a/app/src/main/res/layout/item_recyclerview.xml
+++ b/app/src/main/res/layout/item_recyclerview.xml
@@ -1,19 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="130dp"
+    android:layout_marginStart="16dp"
+    android:layout_marginEnd="16dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.cardview.widget.CardView
         android:id="@+id/card"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:cardUseCompatPadding="true"
-        android:background="@drawable/cardbackground"
+        app:cardCornerRadius="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+
+
         >
         <RelativeLayout
+            android:id="@+id/cardRelativeLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="16dp"
+            android:padding="16dp"
+            android:background="@color/disabled"
+            android:elevation="0dp"
             >
             <TextView
                 android:id="@+id/title"
@@ -28,19 +36,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/title"
-                android:layout_marginTop="16dp"
-                android:text="description"
+                android:layout_marginTop="18dp"
+                android:maxLines="2"
+                android:ellipsize="end"
+                android:layout_marginEnd="70dp"
+                android:layout_marginRight="70dp"
+                android:text="description description description description description description descriptiondescription descriptiondescription descriptiondescription description"
                 />
 
-            <TextView
-                android:id="@+id/distance"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="distance"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                />
+
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
