--- a/app/src/main/res/layout/item_recyclerview.xml
+++ b/app/src/main/res/layout/item_recyclerview.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="130dp"
+    android:layout_height="330dp"
     android:layout_marginStart="16dp"
     android:layout_marginEnd="16dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -12,24 +12,32 @@
         app:cardUseCompatPadding="true"
         app:cardCornerRadius="10dp"
         app:layout_constraintStart_toStartOf="parent"
-
-
         >
         <RelativeLayout
             android:id="@+id/cardRelativeLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="16dp"
             android:background="@color/disabled"
             android:elevation="0dp"
             >
+            <ImageView
+                android:id="@+id/thumbnail"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:src="@drawable/no_image"
+                android:scaleType="fitXY"
+                />
             <TextView
                 android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="title"
+                android:layout_below="@id/thumbnail"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textStyle="bold"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
                 />
             <TextView
                 android:id="@+id/description"
@@ -39,13 +47,13 @@
                 android:layout_marginTop="18dp"
                 android:maxLines="2"
                 android:ellipsize="end"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginBottom="10dp"
                 android:layout_marginEnd="70dp"
                 android:layout_marginRight="70dp"
                 android:text="description description description description description description descriptiondescription descriptiondescription descriptiondescription description"
                 />
-
-
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
