--- a/app/src/main/res/layout/navigation.xml
+++ b/app/src/main/res/layout/navigation.xml
@@ -1,35 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="130dp"
+    android:layout_height="330dp"
+
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        >
+        app:layout_constraintEnd_toEndOf="parent"
+        android:paddingBottom="30dp"
+        app:layout_constraintStart_toStartOf="parent">
+
         <ImageView
             android:id="@+id/arrowView"
             android:layout_width="@dimen/_25sdp"
             android:layout_height="@dimen/_25sdp"
-            android:src="@drawable/ic_baseline_navigation_24"
-            android:tint="@color/colorPrimary"
             android:layout_centerHorizontal="true"
-            />
+            android:src="@drawable/ic_baseline_navigation_24"
+            android:tint="@color/colorPrimary" />
 
 
         <TextView
             android:id="@+id/distance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="distance"
-            android:textStyle="bold"
             android:layout_below="@+id/arrowView"
-            />
+            android:text="distance"
+            android:textStyle="bold" />
 
     </RelativeLayout>
 
